# lasma-telegram-birthday-reminder

./: alive.py  birthday.py  debug.py  main.py  pyproject.toml  reformat.py
.upm/: store.json  store.json647082050
Encrypted/Batches/: 2005.txt
